examples/test/testpolicy18551.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18551
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key16: value13
      key1: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value21
          key26: value1
      podSelector:
        matchLabels:
          key5: value13
